--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,6 @@
     <string name="app_name">SecondWeekProject</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="wordListTitle">Word List</string>
+    <string name="wordListTitle">Words</string>
+    <string name="learnedWordsTitle">Learned Words</string>
 </resources>
