--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,7 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="wordListTitle">Words</string>
     <string name="learnedWordsTitle">Learned Words</string>
+
+    <string name="word">word</string>
+    <string name="learned">learned</string>
 </resources>
