Added a button to the detail screen to toggle the 'learned' status of words. Words marked as learned are now displayed in the learned screen.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,6 @@
     <string name="learnedWordsTitle">Learned Words</string>
 
     <string name="word">word</string>
-    <string name="learned">learned</string>
+    <string name="learned">Learned</string>
+    <string name="unLearned">UnLearned</string>
 </resources>
