--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="word">word</string>
     <string name="learned">Learned</string>
     <string name="unLearned">UnLearned</string>
+    <string name="searchHint">Search a word</string>
 </resources>
